<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a9"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#000"
        android:paddingLeft="50dp"
        android:shadowDx="5"
        android:shadowDy="5"
        android:text="@string/registration"
        android:textColor="#1E88E5"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingStart="50dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="40dp"
        android:paddingLeft="50dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:text="@string/name"
        android:textColor="#1E88E5"
        android:textSize="12sp"
        android:textStyle="bold"
        android:paddingStart="50dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_black"
        android:elevation="5dp"
        android:ems="15"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#000000"
        tools:targetApi="lollipop"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#000"
        android:paddingLeft="50dp"
        android:shadowDx="5"
        android:shadowDy="5"
        android:text="@string/email"
        android:textColor="#1E88E5"
        android:textSize="12sp"
        android:textStyle="bold"
        android:paddingStart="50dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_black"
        android:elevation="5dp"
        android:ems="15"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"

        android:padding="10dp"
        tools:targetApi="lollipop"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#000"
        android:paddingLeft="50dp"
        android:shadowDx="5"
        android:shadowDy="5"
        android:text="@string/mobile"
        android:textColor="#1E88E5"
        android:textSize="12sp"
        android:textStyle="bold"
        android:paddingStart="50dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editMob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_black"
        android:elevation="5dp"
        android:ems="15"
        android:hint="@string/mobile"
        android:inputType="text|phone"
        android:padding="10dp"
        tools:targetApi="lollipop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#000"
        android:paddingLeft="50dp"
        android:shadowDx="5"
        android:shadowDy="5"
        android:text="@string/password"
        android:textColor="#1E88E5"
        android:textSize="12sp"
        android:textStyle="bold"
        android:paddingStart="50dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_black"
        android:elevation="5dp"
        android:ems="15"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        tools:targetApi="lollipop"
         />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:text="@string/select_department"
            android:textColor="#2196F3"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <Spinner
            android:id="@+id/spinner_dpt"
            android:layout_width="150dp"
            android:layout_marginLeft="48dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow_black"
            android:elevation="5dp"
            android:ems="15"
            android:layout_marginTop="5dp"
            android:minHeight="40dp"
            tools:targetApi="lollipop" />
        <include
            android:id="@+id/my_loading_layout"
            layout="@layout/my_loading_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp" />

    </LinearLayout>
    <Button
        android:id="@+id/btn_account"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shadow_btn_layer_list"
        android:ems="15"
        android:text="@string/sign_up"
        android:drawableTint="#2196F3"
        android:textAllCaps="false"
        android:textColor="#fff"
        tools:ignore="UnusedAttribute" />
</LinearLayout>