<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="inorg.gsdl.plndpt.ForgetPassword">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/a9"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:shadowColor="#000"
            android:paddingLeft="50dp"
            android:shadowDx="5"
            android:shadowDy="5"
            android:text="Reset Password"
            android:textColor="#1E88E5"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-black"
            android:shadowColor="#000"
            android:paddingLeft="50dp"
            android:shadowDx="5"
            android:shadowDy="5"
            android:text="@string/email"
            android:textColor="#1E88E5"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/fp_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow_black"
            android:elevation="5dp"
            android:ems="15"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"

            android:padding="10dp"
            tools:targetApi="lollipop"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-black"
            android:shadowColor="#000"
            android:paddingLeft="50dp"
            android:shadowDx="5"
            android:shadowDy="5"
            android:text="@string/password"
            android:textColor="#1E88E5"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/fp_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow_black"
            android:elevation="5dp"
            android:ems="15"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            tools:targetApi="lollipop"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-black"
            android:shadowColor="#000"
            android:paddingLeft="50dp"
            android:shadowDx="5"
            android:shadowDy="5"
            android:text="Confirm Password"
            android:textColor="#1E88E5"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/fp_pass2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow_black"
            android:elevation="5dp"
            android:ems="15"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            tools:targetApi="lollipop"
            />
        <Button
            android:id="@+id/fp_reset_btn"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/shadow_btn_layer_list"
            android:ems="15"
            android:text="Reset Password"
            android:drawableTint="#2196F3"
            android:textAllCaps="false"
            android:textColor="#fff"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
</RelativeLayout>